# System-Call-Trace

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  sonar-project.properties
.github/workflows/: build.yml
src/: main  main.c  main.h
src/infrastructure/interactive/: executeInteractive.h
src/infrastructure/noninteractive/: executeNonInteractive.h
src/store/: store.c  store.h
src/store/action-creators/: executionActionCreators.c  executionActionCreators.h
src/store/action-types/: executionActionTypes.h
src/store/actions/: executionActions.h
src/store/reducers/: executionReducer.c  executionReducer.h
src/store/states/: executionState.h
